--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: nbsForecast
+Package: nbsForecast2
 Title: What the package does (one line)
 Version: 0.1
 Authors@R: "First Last <first.last@example.com> [aut, cre]"
